[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pii-protect"
version = "0.1.7"
description = "Pluggable, on-premise-first PII masking, unmasking, and redaction library."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "Musaib Altaf" }
]
keywords = ["pii", "masking", "redaction", "privacy", "ner", "encryption"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29.0"]
redis = ["redis>=5.0.0"]
spacy = ["spacy>=3.7.0"]
gliner = [
    "gliner>=0.2.22",
]
privacy-filter = ["transformers>=4.50.0", "torch>=2.0.0", "accelerate>=1.0", "safetensors>=0.4.0"]
all = [
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "spacy>=3.7.0",
    "gliner>=0.2.22",
    "transformers>=4.50.0",
    "torch>=2.0.0",
    "accelerate>=1.0",
    "safetensors>=0.4.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
]

[project.urls]
Repository = "https://github.com/musaib-js/pii-protect"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
